<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Sportrijk</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment!</string>
    <string name="btnLogin">Login</string>
    <string name="btnStartRoute">Start route</string>
    <string name="btnMedailles">Medailles</string>
    <string name="btnDelen">Delen</string>
    <string name="btnVrienden">Vrienden</string>
    <string name="btnAbout">About</string>
    <string name="titleLogin">LOGIN</string>
    <string name="btnRegistreer">Registreer</string>
    <string name="txtGebruikersnaam">Gebruikersnaam</string>
    <string name="txtPaswoord">paswoord</string>
    <string name="btnGoogle">Log in met Google+</string>

    <string-array name="transportArray">
        <item>Te voet</item>
        <item>Fiets</item>
        <item>Skates</item>
        <item>Longboard/skateboard</item>
        <item>Wagen</item>
    </string-array>
    <string name="transport_Prompt">Kies een vervoersmiddel</string>
    <string name="Baseball">Baseball</string>
    <string name="Rugby">Rugby</string>
    <string name="Lopen">Lopen</string>
    <string name="Atletiek">Atletiek</string>
    <string name="Skaten">Skaten</string>
    <string name="volleybal">Volleybal</string>
    <string name="baseball">Basebal</string>
    <string name="Basketball">Basketbal</string>
    <string name="voetbal">Voetbal</string>
    <string name="rbAlleen">Alleen</string>
    <string name="rbSamen">Samen</string>
    <string name="rbWillekeurig">Willekeurige route</string>
    <string name="rbEigen">Eigen route</string>
    <string name="rbNieuw">Nieuwe route</string>
    <string name="btnVerder">Verder</string>
    <string name="Voorkeur">Sportvoorkeur (kies 1 of meer)</string>
    <string name="txtWachtwoord">Wachtwoord</string>
    <string name="txtHerhaalWachtwoord">Herhaal Wachtwoord</string>
    <string name="txtMale">Male</string>
    <string name="txtFemale">Female</string>
    <string name="txtRegistratie">Registratie</string>
    <string name="txtNaam">Naam</string>
    <string name="txtVoornaam">Voornaam</string>
    <string name="txtEmail">Email</string>
    <string name="txtGeboortedatum">Geboortedatum</string>
    <string name="btnVoltooi">Voltooi</string>
    <string name="btnBestemmingBereikt">Bestemming Bereikt</string>
    <string name="btnNextActivity">Volgende activiteit</string>

</resources>
