<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="be.vives.citroentjes.sportrijk.CreateRouteTwo">

    <Spinner
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:entries="@array/transportArray"
        android:prompt="@string/transport_Prompt"
        android:id="@+id/SpinnerTransport"
        android:layout_margin="15px">
        </Spinner>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/Voorkeur"
        android:layout_margin="15px"/>
<LinearLayout
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:weightSum="3">
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/voetbal"/>
        <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Basketball"/>
        <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/baseball"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/volleybal"/>
        <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Skaten"/>
        <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Atletiek"/>
        </LinearLayout>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:orientation="vertical">
        <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Lopen"/>
        <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Rugby"/>
        <CheckBox
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/Baseball"/>
        </LinearLayout>
    </LinearLayout>

<Button
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/btnVerder"
    android:id="@+id/btnVerder2"/>

</LinearLayout>
