<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="be.vives.citroentjes.sportrijk.SportrouteOne"
    android:orientation="vertical">

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">
        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/rbAlleen"/>
        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/rbSamen"/>
        </RadioGroup>

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30px">
        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/rbWillekeurig"/>
        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/rbEigen"/>
        <RadioButton
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            android:text="@string/rbNieuw"/>
    </RadioGroup>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnVerder"/>

</LinearLayout>
