<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/txtRegistratie"
        android:id="@+id/textView"
        android:layout_gravity="center_horizontal"
        android:textSize="30dp"
        android:layout_margin="10dp" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtGebruikersnaam"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtNaam"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtVoornaam"
        android:layout_marginBottom="20dp"/>

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/txtEmail"
        android:layout_marginBottom="20dp"/>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/txtGeboortedatum"
        android:textSize="20dp"
        android:layout_marginLeft="10dp"
        android:layout_marginBottom="5dp"
        android:textColor="@android:color/darker_gray" />

    <DatePicker
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/datePicker"
        android:calendarViewShown="false"
        android:layout_marginLeft="5dp"
        android:layout_marginBottom="10dp"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="5dp"
        android:text="@string/btnVoltooi"/>


</LinearLayout>