<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="be.vives.citroentjes.sportrijk.HubFragment"
    android:orientation="vertical"
    android:weightSum="1.0"
    android:layout_margin="15px">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_weight="0.2"/>

    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:id="@+id/btnStartRoute"
        android:text="@string/btnStartRoute"
        android:layout_weight="0.2"/>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnMedailles"
        android:gravity="center"
        android:layout_weight="0.2"/>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_weight="0.2"
        android:weightSum="2">
        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/btnVrienden"
            android:gravity="center"
            android:id="@+id/btnVrienden"
            android:layout_weight="1"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="fill_parent"
            android:text="@string/btnDelen"
            android:id="@+id/btnDelen"
            android:layout_weight="1"/>
        </LinearLayout>
    <Button
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:id="@+id/btnAbout"
        android:text="@string/btnAbout"
        android:layout_weight="0.1"/>
</LinearLayout>
